--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Romano Firtermaiszter <firtermaiszter.romano@gmail.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Romesz/speech-app.git"
   },
   "keywords": [
     "speech",
